--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -24,13 +24,13 @@
   //     "bucket_name": "my-bucket"
   //   }
   // ],
-  // "d1_databases": [
-  //   {
-  //     "binding": "MY_DB",
-  //     "database_name": "my-database",
-  //     "database_id": ""
-  //   }
-  // ],
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "wordcross-cms",
+      "database_id": "placeholder-will-be-replaced-after-creation"
+    }
+  ],
   // "ai": {
   //   "binding": "AI"
   // }
